<resources>
    <string name="app_name">My Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_stack">Stack</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_array">Array</string>
    <string name="menu_graph">Graph</string>
    <string name="menu_dp">Dynamic Programming</string>
    <string name="menu_trees">Tree</string>
    <string name="menu_ll">Linked List</string>
    <string name="menu_recursion">Recursion</string>
    <string name="menu_strings">String</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add">+</string>
    <string name="Intro">Introduction to Stack</string>
    <string name="stackChoose">Choose a file</string>
    <string name="enter_name_file">Enter name of a file</string>
    <string name="upload">Upload</string>
    <string name="Topics">Select Topic</string>

<!-- TODO:   Options Menu-->
    <string name="addFile">AddFile</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>

<!--    TODO: Pop Up Menu-->
    <string name="stack">Stack</string>
    <string name="array">Array</string>
    <string name="dp">Dynamic Programming</string>
    <string name="graph">Graph</string>
    <string name="linkedList">Linked List</string>
    <string name="queue">Queue</string>
    <string name="recursion">Recursion</string>
    <string name="string">String</string>
    <string name="tree">Tree</string>
</resources>