<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_stack"
            android:icon="@drawable/ic_stack"
            android:title="@string/menu_stack" />

        <item
            android:id="@+id/nav_array"
            android:icon="@drawable/ic_array"
            android:title="@string/menu_array" />

        <item
            android:id="@+id/nav_dp"
            android:icon="@drawable/ic_dp"
            android:title="@string/menu_dp" />

        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_graph"
            android:title="@string/menu_graph" />

        <item
            android:id="@+id/nav_ll"
            android:icon="@drawable/ic_ll"
            android:title="@string/menu_ll" />

        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_queue"
            android:title="@string/menu_queue" />

        <item
            android:id="@+id/nav_recursion"
            android:icon="@drawable/ic_recursion"
            android:title="@string/menu_recursion" />

        <item
            android:id="@+id/nav_strings"
            android:icon="@drawable/ic_string"
            android:title="@string/menu_strings" />

        <item
            android:id="@+id/nav_trees"
            android:icon="@drawable/ic_tree"
            android:title="@string/menu_trees" />

    </group>
</menu>