<?xml version="1.0" encoding="utf-8"?>

<!--<ImageView-->
<!--    android:id="@+id/addButton"-->
<!--    android:layout_width="50dp"-->
<!--    android:layout_height="50dp"-->
<!--    android:src="@drawable/add_icon"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintRight_toRightOf="parent"-->
<!--    android:layout_marginBottom="16dp"-->
<!--    android:layout_marginEnd="16dp"-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    />-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/upload"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_icon"
        android:title="@string/addFile"
        app:showAsAction="always" />

    <item
        android:id="@+id/bookmark"
        android:orderInCategory="100"
        android:icon="@drawable/ic_bookmark_icon"
        android:title="@string/bookmark"
        app:showAsAction="always"/>

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_icon"
        android:title="@string/search"
        app:showAsAction="always"/>
</menu>